fix spacing

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -312,9 +312,9 @@ header {
   margin-bottom: 350px;
   @media(max-width: 570px) {
     margin-bottom: 320px;
+
   }
-  margin-bottom: 440px;
-  @media(max-width: 570px) {
+  @media(max-width: 440px) {
     margin-bottom: 280px;
   }
 }
